// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no account address 1`] = `
<div
  className="row"
>
  <div
    className="col-lg-6"
  >
    Contract  
    <a
      href="https://ropsten.etherscan.io/address/0x3210"
    >
      0x3210
    </a>
  </div>
  <div
    className="col-lg-6"
  >
    Account  
    <span>
      Not connected, please login to MetaMask
    </span>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-lg-6"
  >
    Contract  
    <a
      href="https://ropsten.etherscan.io/address/0x3210"
    >
      0x3210
    </a>
  </div>
  <div
    className="col-lg-6"
  >
    Account  
    <a
      href="https://ropsten.etherscan.io/address/0x0123"
    >
      0x0123
    </a>
  </div>
</div>
`;
